force-app/main/default/objects/Visit__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value should be with record type HCP/Doctor</errorMessage>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Doctor/HCP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Visits (Doctor)</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>