force-app/main/default/objects/Visit__c/fields/DoctorAddress__c.field-meta.xml
<CustomField>
    <fullName>DoctorAddress__c</fullName>
    <formula>Doctor__r.Address__c</formula>
    <label>Doctor Address</label>
    <type>Text</type>
</CustomField>