force-app/main/default/objects/Visit__c/fields/DoctorMobile__c.field-meta.xml
<CustomField>
    <fullName>DoctorMobile__c</fullName>
    <formula>Doctor__r.Mobile__c</formula>
    <label>Doctor Mobile</label>
    <type>Text</type>
</CustomField>