force-app/main/default/objects/Visit__c/fields/DoctorName__c.field-meta.xml
<CustomField>
    <fullName>DoctorName__c</fullName>
    <formula>Doctor__r.PartnerName__c</formula>
    <label>Doctor Name</label>
    <type>Text</type>
</CustomField>