force-app/main/default/objects/Visit__c/fields/DoctorType__c.field-meta.xml
<CustomField>
    <fullName>DoctorType__c</fullName>
    <formula>TEXT(Doctor__r.PartnerType__c)</formula>
    <label>Doctor Type</label>
    <type>Text</type>
</CustomField>