force-app/main/default/objects/Visit__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store Hospital name under visit</description>
    <label>Hospital Name</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>