force-app/main/default/objects/Visit__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store Name</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Visits (Store Name)</relationshipLabel>
    <relationshipName>Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>