force-app/main/default/objects/Visit__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>Value must be with record type Dietician</errorMessage>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dietician</value>
        </filterItems>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medical Representative</value>
        </filterItems>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Nutritional Advisor / Promoter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Visits (User)</relationshipLabel>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>