force-app/main/default/objects/Visit__c/fields/VisitDescription__c.field-meta.xml
<CustomField>
    <fullName>VisitDescription__c</fullName>
    <label>Visit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>