force-app/main/default/objects/Visit__c/fields/visitDtoOfflineId__c.field-meta.xml
<CustomField>
    <fullName>visitDtoOfflineId__c</fullName>
    <label>visitDtoOfflineId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>