force-app/main/default/objects/Visit__c/fields/visitId__c.field-meta.xml
<CustomField>
    <fullName>visitId__c</fullName>
    <label>visitId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>