force-app/main/default/objects/Visit__c/fields/VisitTime__c.field-meta.xml
<CustomField>
    <fullName>VisitTime__c</fullName>
    <label>Visit Time</label>
    <type>Time</type>
</CustomField>